--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 # Documentation page information
-site_name: SparkFun XBee 3 Explorer Regulated Hookup Guide
-site_description: A guide for getting started with the SparkFun XBee 3 Explorer Regulated
+site_name: SparkFun XBee Regulated Qwiic Board Hookup Guide
+site_description: A guide for getting started with the SparkFun XBee Regulated Qwiic Board
 site_url: https://sparkfun.github.io/SparkFun_XBee_Regulated_Qwiic
 site_author: SparkFun Electronics
 
@@ -11,16 +11,30 @@ copyright:
   Copyright 2023 - <a href="https://www.sparkfun.com/" target="_blank" rel="noopener">SparkFun Electronics&#174;<br>
   <a href="https://goo.gl/maps/vkstCpQZW6jZMjzYA" target="_blank" rel="noopener">6333 Dry Creek Parkway, Niwot, Colorado 80503</a>
 
+
+# Default edit/view actions to "main" branch, instead of "master"
+edit_uri: blob/main/docs/
+
+
+
 # Configuration for webpage theme
 theme:
+  # Theme: https://squidfunk.github.io/mkdocs-material/
   name: material
-  logo: assets/sfe_logo_sm.png
-  favicon: assets/favicon.png
+
+
+  # Icon in Browser Tab (must be square img - i.e. 32x32 pixels)
+  favicon: assets/img/sfe_logo_sq.png
+
+
+  # Page Font
   font:
     text: Roboto
     code: Roboto Mono
-  features:
+  
 
+  # Features to Include (ref. theme documentation)
+  features:
     # Enable copy button on code blocks
     - content.code.copy
 
@@ -32,7 +46,6 @@ theme:
 
     # Enable "view source" and "edit this page" buttons
     - content.action.edit
-
     # - content.action.view
 
     # Enable Navigation buttons in the footer (i.e. previous/next)
@@ -41,10 +54,10 @@ theme:
     # Enables anchor tracking (updates page url with the section user is on)
     # i.e. https://docs.sparkfun.com/<page link>/#<sub-section>
     - navigation.tracking
-    - navigation.tabs.sticky
 
     # Enables tabs for navigating the website
     - navigation.tabs
+
     # Keeps tabs visible in the header when scrolling
     - navigation.tabs.sticky
     
@@ -52,12 +65,11 @@ theme:
     # Allows users to easily jump to the beginning of the page
     - navigation.top
 
-    # Renders path for page navigation at top of the page (makes page navigation more mobile friendly)
+    # Renders path for page navigation at the top of the page (makes page navigation more mobile friendly)
     - navigation.path
 
 
-
-  # Adds light/dark theme to webpage
+  # Adds light/dark theme to the webpage
   palette:
     # Palette toggle for automatic mode
     - media: "(prefers-color-scheme)"
@@ -85,6 +97,8 @@ theme:
         icon: material/weather-night
         name: Switch to light mode    
 
+
+  # Configures icons
   icon:
     # Sets homepage icon
     logo: sfe-logo
@@ -96,7 +110,7 @@ theme:
     edit: material/file-document-edit-outline
     # view: material/file-code-outline
 
-    # Admonition Icons
+    # Admonition Icons (callout boxes)
     admonition:
       note: octicons/tag-16
       abstract: octicons/checklist-16
@@ -117,11 +131,14 @@ theme:
       code: fontawesome/regular/file-code
       terminal: octicons/terminal-16
       serial: fontawesome/solid/display
+      hot: material/fire-alert
       # Permalink icon
       link: octicons/link-16
 
-# Adds PDF icon to download hookup guide
+
+  # Adds overrides for icons, HTML, etc.
   custom_dir: overrides
+
 
 
 # Included MkDocs plugins
@@ -242,4 +259,3 @@ nav:
     - Troubleshooting: troubleshooting.md
     - Submit Issues: github/file_issue.md
     - Contribute: github/contribute.md
-
