--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,11 +1,11 @@
 # Documentation page information
-site_name: SparkFun XBee Regulated Qwiic Board Hookup Guide
-site_description: A guide for getting started with the SparkFun XBee Regulated Qwiic Board
-site_url: https://sparkfun.github.io/SparkFun_XBee_Regulated_Qwiic
+site_name: SparkFun Digi XBee® Explorer Regulated Board Hookup Guide
+site_description: A guide for getting started with the SparkFun Digi XBee® Explorer Regulated Board
+site_url: https://sparkfun.github.io/SparkFun_Digi_XBee_Regulated_Qwiic
 site_author: SparkFun Electronics
 
-repo_url: https://github.com/sparkfun/SparkFun_XBee_Regulated_Qwiic
-repo_name: sparkfun/SparkFun_XBee_Regulated_Qwiic
+repo_url: https://github.com/sparkfun/SparkFun_Digi_XBee_Regulated_Qwiic
+repo_name: sparkfun/SparkFun_Digi_XBee_Regulated_Qwiic
 
 copyright:
   Copyright 2023 - <a href="https://www.sparkfun.com/" target="_blank" rel="noopener">SparkFun Electronics&#174;<br>
